# gridops-agentic-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt  test_system.py
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: overview.md
docs/case-studies/: ieee-33-bus.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: advanced-features.md  cli-reference.md  networks.md
src/: __init__.py  config.py  orchestrator.py  report_generator.py  visualization.py
src/agents/: __init__.py  constraint_checker.py  explainer.py  planner.py  powerflow_user.py  retrieval.py
src/core/: __init__.py  case_database.py  contingency_simulator.py  network_loader.py  state_manager.py
src/tools/: __init__.py  der_integration.py  network_analysis.py  opf_tools.py  powerflow_tools.py  protection_coordination.py  reconfiguration.py  reliability_indices.py  timeseries_analysis.py
tests/: __init__.py  conftest.py
tests/agents/: __init__.py  test_constraint_checker.py  test_explainer.py  test_planner.py  test_retrieval.py
tests/integration/: __init__.py  test_orchestrator.py
tests/unit/: __init__.py  test_case_database.py  test_contingency_simulator.py  test_der_integration.py  test_network_analysis.py  test_network_loader.py  test_nk_contingency.py  test_opf_tools.py  test_powerflow_tools.py  test_protection_coordination.py  test_reconfiguration.py  test_reliability_indices.py  test_report_generator.py  test_state_manager.py  test_timeseries_analysis.py  test_visualization.py
